talking with one phrase works

--- a/john.the.sorcerer-0.2/TODO
+++ b/john.the.sorcerer-0.2/TODO
@@ -1,1 +1,3 @@
 . clicking in MOUSEBUTTONUP you go towards the move taskbarbutton ?
+
+. roomnumbers maybe check against 1, 1.1 etc in if clauses !!
