--- a/john.the.sorcerer-0.2/README
+++ b/john.the.sorcerer-0.2/README
@@ -1,7 +1,7 @@
 John the sorcerer, a Simon the sorcerer clone
 
-'i' key : show inventory, 
-'x' key : exit inventory and go back to main screen 
+'i' key : show inventory screen, 
+'x' key : in inventory screen, exit inventory and go back to main screen 
 
 click on the buttons in the taskbar to do something.
 as an example : push move, then click on the main screen and 
