fabian the goblin knight overlord

--- a/john.the.sorcerer-0.2/TODO
+++ b/john.the.sorcerer-0.2/TODO
@@ -3,4 +3,5 @@
 . change roompath algorythms in rooms
 . roomnumbers maybe check against 1, 1.1 etc in if clauses !
 
+. indian pipe at PHilou and Sjeik-BenaloWeed
 . story of John as a wizard :-) !
