--- a/john.the.sorcerer-0.2/README
+++ b/john.the.sorcerer-0.2/README
@@ -1,7 +1,9 @@
 John the sorcerer, a Simon the sorcerer clone
 
-'i' key : show inventory screen, 
-'x' key : in inventory screen, exit inventory and go back to main screen 
+Install Pygame and Python (http://python.org http://pygame.org), then 
+run 'python game.py' in this directory.
+
+Walkto, Pickup and Talkto works, the rest is under development.
 
 click on the buttons in the taskbar to do something.
 as an example : push move, then click on the main screen and 
